--- a/mantenedor_autos.html
+++ b/mantenedor_autos.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mantenedor de Autos - API REST</title>
+  <title>Mantenedor de Autos - Conexión API</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container my-5">
-    <h1 class="text-center mb-4">Mantenedor de Autos (Simulación API REST)</h1>
+    <h1 class="text-center mb-4">Mantenedor de Autos (Conectado a API Externa)</h1>
 
     <div class="row">
       <div class="col-md-5">
@@ -19,10 +19,6 @@
             <input type="hidden" id="carId"> 
             
             <div class="mb-3">
-              <label for="marca" class="form-label">Marca</label>
-              <input type="text" class="form-control" id="marca" required>
-            </div>
-            <div class="mb-3">
               <label for="modelo" class="form-label">Modelo</label>
               <input type="text" class="form-control" id="modelo" required>
             </div>
@@ -30,10 +26,15 @@
               <label for="anio" class="form-label">Año</label>
               <input type="number" class="form-control" id="anio" min="1900" max="2050" required>
             </div>
-             <div class="mb-3">
-              <label for="color" class="form-label">Color</label>
-              <input type="text" class="form-control" id="color" required>
+            <div class="mb-3">
+              <label for="precio" class="form-label">Precio</label>
+              <input type="number" class="form-control" id="precio" step="10000" required>
             </div>
+            <div class="mb-3">
+              <label for="marca_id" class="form-label">ID de Marca</label>
+              <input type="number" class="form-control" id="marca_id" required>
+            </div>
+            
             <button type="submit" id="saveCarBtn" class="btn btn-primary w-100">Guardar Auto</button>
           </form>
         </div>
@@ -46,10 +47,10 @@
             <thead>
               <tr>
                 <th scope="col">ID</th>
-                <th scope="col">Marca</th>
                 <th scope="col">Modelo</th>
                 <th scope="col">Año</th>
-                <th scope="col">Color</th>
+                <th scope="col">Precio</th>
+                <th scope="col">Marca ID</th>
                 <th scope="col">Acciones</th>
               </tr>
             </thead>
@@ -60,6 +61,7 @@
     </div>
   </div>
 
+  <script type="module" src="api.js"></script>
   <script type="module" src="script_autos.js"></script>
 </body>
 </html>
