--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Mantenedor de Autos</title>
+    <title>Login - API Autos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> </head>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
     <div class="container my-5">
-        <h1 class="text-center mb-4">Sistema de Inventario de Autos</h1>
+        <h1 class="text-center mb-4">Sistema de Inventario (Login)</h1>
         <div class="row justify-content-center">
             <div class="col-md-4">
                 <div class="card shadow p-4">
@@ -33,6 +34,7 @@
         </div>
     </div>
 
+    <script type="module" src="api.js"></script>
     <script type="module" src="script_autos.js"></script>
 </body>
 </html>
