--- a/mantenedor_autos.html
+++ b/mantenedor_autos.html
@@ -5,26 +5,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestión de Inventario de Autos</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css"> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   
   <style>
-    /* Estilos adicionales para mejorar la estética */
     .header-section {
-        background-color: #0d6efd; /* Color primario de Bootstrap */
+        background-color: #0d6efd; 
         color: white;
         padding: 20px 0;
         margin-bottom: 30px;
     }
     .form-card {
-        border-left: 5px solid #0d6efd; /* Borde de color primario en el formulario */
+        border-left: 5px solid #0d6efd; 
     }
     .table-container {
-        max-height: 60vh; /* Altura máxima para hacer scroll en la tabla */
+        max-height: 60vh; 
         overflow-y: auto;
     }
     .data-table th {
-        background-color: #f8f9fa; /* Fondo gris claro para encabezados */
+        background-color: #f8f9fa; 
         position: sticky;
         top: 0;
         z-index: 10;
@@ -47,8 +46,7 @@
       <div class="col-md-5">
         <div class="card shadow p-4 mb-4 form-card">
           <h2 class="card-title text-primary mb-4">Ingresar / Editar Auto</h2>
-          <form id="carForm">
-            <input type="hidden" id="carId"> 
+          <form id="carForm"> <input type="hidden" id="carId"> 
             
             <div class="mb-3">
               <label for="modelo" class="form-label">Modelo</label>
@@ -89,14 +87,14 @@
                   <th scope="col">Acciones</th>
                 </tr>
               </thead>
-              <tbody id="carsTableBody">
-                </tbody>
+              <tbody id="carsTableBody"> </tbody>
             </table>
           </div>
         </div>
       </div>
     </div>
   </div>
+
   <script type="module" src="api.js"></script>
   <script type="module" src="script_autos.js"></script>
 </body>
